2011-12-01 Kazuhiko
* use acquired description from the parent if empty in the web section.

2011-08-29 Kazuhiko
* use acquired subject list from the parent if empty in the web section.

2011-01-14 Ivan
* Use jQuery

2010-07-09 Ivan
* Deprecate "Subsection" gadget which is replaced by more generic "Browser" gadget

2010-05-08 Jacques
* Added the group 'top menu' in KM forms

2010-04-29 Jacques
* Created CSS style for splash styling

2010-02-16 ivan
* Update Gadget instances to use new file system based Gadget class and default image property

2009-12-25 jps
* Added an option to layout configuration so that it is possible to change the appearance of the navigation menu to anonymous users and make it look like a navigatable web site

2009-11-06 Herve
* Update the configuration of the gadget "Latest Documents" to improve its usage
* Configure the listbox of the gadget "My  Documents" to use the ListBox_asListStyleHTML page template.

2009-11-06 Herve
* Updates the css file "erp5_knowledge_box.css" to improve text presentation ListBox_asListStyleHTML

2009-11-06 Herve
* Configure the listbox of the gadget "Latest Documents" to use the ListBox_asListStyleHTML page template.


2009-08-03 fabien
* begening of the new km style integration :
* remove old icons and add new ones (same with css files)
* change css class hiddenLabel to hidden_label
* update some css selectors to fit erp5 html code
* update header
* remove archive directory
This revision is not finished and should be review

2009-05-19 jps
* add a splash area in front page for anonymous users

2009-03-24 fabien
* add some css selectors to display the portal type of objects in the search results
* move some files in erp5_web and in erp5_xhtml_style because they are now generic
* some method need to be renamed after been moved so change the name everywhere

2009-03-19 fabien
- change list method of the listbox to drop using this dirty scriptable key
- use the same form everywhere to display the results
