@@ -76,7 +76,7 @@ return \'No document\'\n
         </item>
         <item>
             <key> <string>_params</string> </key>
-            <value> <string>box_relative_url, **kw</string> </value>
+            <value> <string>box_relative_url=None, box=None, **kw</string> </value>
         </item>
         <item>
             <key> <string>id</string> </key>
